# county_adjacency

./: .editorconfig  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  dev-requirements.txt  pyproject.toml  rebuild_json_data.py  requirements.txt  setup.cfg
.github/workflows/: flake8.yaml  main.yaml  testing.yaml  tests.yaml
county_adjacency/: __init__.py  adjacency.py  data.py  errors.py
scripts/: rebuild_json_data.py
src/county_adjacency/: __init__.py  adjacency.py  data.py  errors.py
tests/: test_adjacency.py
