
[metadata]
name = county_adjacency
version = attr: county_adjacency.__version__
description = Finds adjacent counties for a specified county.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/chaddotson/county_adjacency
author = Chad Dotson
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Education
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: GIS
    Topic :: Utilities
keywords = geography, geo, counties, us
project_urls =
    Source=https://github.com/chaddotson/county_adjacency
    Tracker=https://github.com/chaddotson/county_adjacency/issues

[options]
package_dir =
    =src

packages =
    county_adjacency

install_requires =
    python-Levenshtein==0.12.0

python_requires = >=3.6

setup_requires =
    setuptools>=40.0


[options.packages.find]
where = ./

[options.extras_require]
testing =
    black==20.8b1
    coverage>=5.0
    flake8>=3.8.0
    flake8-docstrings>=1.5.0
    flake8-rst-docstrings>=0.0.14
    requests==2.25.0
    pytest>=6.1

;[tool:pytest]
;log_cli = 1
;log_cli_level = DEBUG
;log_cli_format = %(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)
;log_cli_date_format=%Y-%m-%d %H:%M:%S
;
;
;


[flake8]
max-line-length = 120
ignore = D100, D103, D104, D105
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
